--- a/PHP-angular/package.json
+++ b/PHP-angular/package.json
@@ -23,8 +23,11 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.5",
+    "@emailjs/browser": "^3.12.1",
     "@mui/icons-material": "^5.15.4",
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
     "primeng": "^17.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
