--- a/PHP-angular/angular.json
+++ b/PHP-angular/angular.json
@@ -37,9 +37,10 @@
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css",
+              "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
-            ],
+            ],            
             "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
@@ -103,7 +104,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css"
+              "src/styles.css",
+              "@node_modules/@ng-select/ng-select/scss/default.theme.scss"
             ],
             "scripts": []
           }
