--- a/PHP-angular/package.json
+++ b/PHP-angular/package.json
@@ -12,12 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.0",
-    "@angular/cdk": "^17.1.1",
+    "@angular/cdk": "^17.1.2",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
     "@angular/forms": "^17.0.0",
-    "@angular/material": "^17.0.5",
+    "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/platform-server": "^17.0.0",
@@ -25,9 +25,11 @@
     "@angular/ssr": "^17.0.5",
     "@emailjs/browser": "^3.12.1",
     "@mui/icons-material": "^5.15.4",
+    "@ng-select/ng-select": "^12.0.6",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
+    "primeicons": "^6.0.1",
     "primeng": "^17.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
